--- a/mediasoup-server/package.json
+++ b/mediasoup-server/package.json
@@ -6,7 +6,7 @@
     "test": "karma start",
     "dev": "nodemon src/index.ts",
     "start": "node dist/index.js",
-    "build": "webpack -p"
+    "build": "tsc"
   },
   "nodemonConfig": {
     "ignore": [
@@ -18,22 +18,15 @@
   "license": "ISC",
   "description": "",
   "devDependencies": {
+    "@types/cors": "^2.8.18",
     "@types/express": "^5.0.2",
-    "@types/glob": "^8.1.0",
-    "@types/jasmine": "^5.1.8",
-    "jasmine-core": "^5.7.1",
-    "karma": "^6.4.4",
-    "karma-chrome-launcher": "^3.2.0",
-    "karma-jasmine": "^5.1.0",
-    "karma-webpack": "^5.0.1",
     "nodemon": "^3.1.10",
     "ts-loader": "^9.5.2",
     "ts-node": "^10.9.2",
-    "typescript": "^5.8.3",
-    "webpack": "^5.99.8",
-    "webpack-dev-server": "^5.2.1"
+    "typescript": "^5.8.3"
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^5.1.0",
     "ffmpeg": "^0.0.4",
     "mediasoup": "^3.15.8",
